5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1723_2496.log
== SUBMITION (2019-05-09 10:06:24) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	soma += num
	num = int(input("Digite um numero: "))
print(mensagem)
-- EXECUTION TIME:
0.157357
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2496/main.py", line 7, in <module>
    soma += num
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:06:33) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	soma += num
	num = int(input("Digite um numero: "))
print(mensagem)
-- EXECUTION TIME:
0.1255
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2496/main.py", line 7, in <module>
    soma += num
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:06:34) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	soma += num
	num = int(input("Digite um numero: "))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma += num
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:06:58) 
-- CODE:
# Primeiro input
num = int(input("Digite um numero: "))
soma = 0
# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	soma += num
	num = int(input("Digite um numero: "))
print(mensagem)
-- EXECUTION TIME:
0.136969
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2496/main.py", line 9, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:07:10) 
-- CODE:
# Primeiro input
num = int(input())
soma = 0
# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	soma += num
	num = int(input("Digite um numero: "))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:07:23) 
-- CODE:
# Primeiro input
num = int(input())
soma = 0
# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	soma += num
	num = int(input())
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(mensagem)
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:08:06) 
-- CODE:
# Primeiro input
num = int(input())
soma = 0
# Laco de repeticao
while (num!=-1):
	# Verifica se valor eh divisivel por 2
	soma += num
	num = int(input())
print(soma)
-- EXECUTION TIME:
0.124002
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
